--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "version": "0.1.0",
   "name": "scryll",
+  "description": "JavaScript library for syncing two scrollbars",
+  "homepage": "https://github.com/the94air/scryll",
   "author": "Abdalla Arbab",
   "license": "MIT",
   "main": "dist/index.js",
