--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://github.com/the94air/scryll",
   "author": "Abdalla Arbab",
   "license": "MIT",
+  "keywords": ["scryll", "sync", "scroll", "browser", "scrollbar"],
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "module": "dist/scryll.esm.js",
